--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "json2csv": "^6.0.0-alpha.2",
