--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "antd": "^5.25.2",
     "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
     "yup": "^1.6.1"
