--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,9 @@
   "type": "commonjs",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.823.0",
-    "@aws-sdk/s3-request-presigner": "^3.824.0",
+    "@aws-sdk/s3-request-presigner": "^3.825.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
