node modules issue after deployment solved

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - ./backend/.env
     volumes:
       - ./backend:/app
+      - /app/node_modules
     restart: unless-stopped
 
   frontend:
