--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -32,5 +32,8 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "password-validator": "^5.3.0"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0"
   }
 }
